@@ -13,8 +13,8 @@ NODE node1
 	POSITION 25 25
 	LABEL Node
 	LABELOFFSET S
-	TARGET static:70
-	USEICONSCALE DEFAULT in
+	TARGET static:70:30
+	USEICONSCALE DEFAULT in absolute
 	LABELBGCOLOR none
 	LABELOUTLINECOLOR none
 	USESCALE none
@@ -24,8 +24,8 @@ NODE node2
 	POSITION 75 25
 	LABEL Node
 	LABELOFFSET S
-	TARGET static:30
-	USEICONSCALE DEFAULT in
+	TARGET static:30:70
+	USEICONSCALE DEFAULT in absolute
 	LABELBGCOLOR none
 	LABELOUTLINECOLOR none
 	USESCALE none
@@ -35,7 +35,7 @@ NODE node3
 	POSITION 125 25
 	LABEL Node
 	LABELOFFSET S
-	USEICONSCALE DEFAULT in
+	USEICONSCALE DEFAULT in absolute
 	LABELBGCOLOR none
 	USESCALE none
 	LABELOUTLINECOLOR none
